# Vaulterm

./: .gitattributes  .gitignore  MOBILE.md  README.md  RELEASING.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: actions.ts  api.ts  confetti.ts  connections.ts  dashboard.ts  editor.ts  files.ts  main.ts  pet.ts  snippets.ts  styles.css  terminal.ts  toast.ts  tunnels.ts  updater.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  mcp.rs  sftp.rs  ssh.rs  store.rs  tunnel.rs  vault.rs  vault_pb.rs
